# launcher-modular

./: .gitignore  CMakeLists.txt  README.md  build.sh  clickable.yaml  launcher-modular.files  launcher-modular.includes  launchermodular.apparmor  launchermodular.contenthub  launchermodular.desktop.in  main.cpp  manifest.json.in  resources.qrc  windowcontroller.cpp  windowcontroller.h
.clickable/arm64/: Dockerfile  image.json
.github/workflows/: main.yml
assets/systemscript/: launchme.sh
backend/: CMakeLists.txt
backend/modules/HelperFunctions/: backend.cpp  helperfunctions.cpp  helperfunctions.h  qmldir
plugins/: CMakeLists.txt
plugins/AppHandler/: apphandler.cpp  apphandler.h  appinfo.cpp  appinfo.h
plugins/CalculatorHelper/: CMakeLists.txt  calculatorhelper.cpp  calculatorhelper.h  plugin.cpp  plugin.h  qmldir
plugins/ContactHelper/: CMakeLists.txt  contacthelper.cpp  contacthelper.h  plugin.cpp  plugin.h  qmldir
plugins/LibertineLauncher/: CMakeLists.txt  libertinelauncher.cpp  libertinelauncher.h  libertineworker.cpp  libertineworker.h  plugin.cpp  plugin.h  qmldir
plugins/MySettings/: accountsservice.cpp  mysettings.cpp  mysettings.h
plugins/NetworkHelper/: CMakeLists.txt  networkhelper.cpp  networkhelper.h  plugin.cpp  plugin.h  qmldir
plugins/Terminalaccess/: terminalaccess.cpp
po/: CMakeLists.txt  af.po  am.po  ar.po  ast.po  be.po  bg.po  bn_BD.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  en_US.po  eo.po  es.po  eu.po  fi.po  fr.po  ga.po  gd.po  gl.po  gu.po  he.po  hu.po  hy.po  id.po  it.po  ja.po  kmr.po  ko.po  launchermodular.lut11.pot  launchermodular.ubuntouchfr.pot  lt.po  ml.po  mr.po  nb_NO.po  nds.po  nl.po  (+22 more)
qml/: About.qml  Autostart.qml  ChangeLogs.qml  GlobalImportPage.qml  Help.qml  ImportPage.qml  Main.qml  Pagemanagement.qml  Pagemanagementback.qml  Settings.qml  Translators.qml
qml/Jslibs/Processing/: FeedItemsParser.js  FeedsUpdateWorker.js
qml/components/: Feed.qml  FeedItem.qml  FeedsModel.qml  JSONListModel.qml  RssChannel.qml  RssChannelItems.qml  jsonpath.js
qml/components/UI/: PageHeaderWithBottomText.qml
qml/helpers/: CachedHttpRequest.js  CachedHttpRequest.qml
qml/pages/: Calendar.qml  Clock.qml  Home.qml  MainFeedPage.qml  Music.qml  Picture.qml  Rss.qml  Todo.qml  Videos.qml
qml/pages/calendar/: Settings.qml
qml/pages/clock/: Settings.qml
qml/pages/home/: Settings.qml
qml/pages/music/: Settings.qml
qml/pages/picture/: ImportPage.qml  SelectFolderPage.qml  Settings.qml
qml/pages/rss/: RssModel.qml  Settings.qml  qmldir
qml/pages/todo/: Settings.qml  TodoModel.qml
qml/pages/videos/: Settings.qml
qml/pages/videos/assets/: musicPage.xcf  videoPage.xcf
qml/widgets/: Alarm.qml  Calculator.qml  Clock.qml  Event.qml  FavoriteApp.qml  FavoriteContact.qml  Lastcall.qml  Lastmessage.qml  SearchContact.qml  Weather.qml
qml/widgets/clock/: Settings.qml
qml/widgets/event/: Settings.qml
qml/widgets/favoritecontact/: Settings.qml
qml/widgets/lastcall/: Settings.qml
qml/widgets/lastmessage/: Settings.qml
qml/widgets/weather/: Settings.qml
